# agentic-review-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  test_openai.py
.github/workflows/: ci.yml
app/: config.py  llm.py  main.py
app/agent/: __init__.py  orchestrator.py  prompts.py  review_agent.py  synthesis.py
app/api/: formatters.py  models.py  router.py  store.py
app/models/: __init__.py  agent.py  enums.py  finding.py  report.py  review.py  tools.py
app/scoring/: __init__.py  matcher.py  models.py
app/telemetry/: __init__.py  helpers.py  logging.py  metrics.py  middleware.py  tracing.py
app/tools/: base.py  pip_audit.py  pip_audit_results.py  pip_audit_server.py  semgrep.py  semgrep_results.py
demo-packs/pack-a/: app.py  expected_findings.json  pip_audit_actual.json  requirements.txt
docs/: baseline.md  mcp-vs-native-comparison.md
tests/integration/: test_api_integration.py  test_tools_integration.py
tests/scenarios/: test_llm_scenarios.py  test_pack_a_baseline.py
tests/unit/: semgrep_actual.json  test_models.py  test_orchestrator.py  test_prompts.py  test_review_agent.py  test_scoring.py  test_smoke.py  test_synthesis.py  test_telemetry.py  test_telemetry_helpers.py  test_tools_pip_audit.py  test_tools_semgrep.py
