[tool.poetry]
package-mode = false

[project]
name = "agentic-review-platform"
version = "0.1.0"
description = "Agentic Engineering Review Platform"
authors = [
    {name = "Ravi Yadavilli", email = "ryadavillicloud@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["fastapi (>=0.135.1,<0.136.0)", "uvicorn[standard] (>=0.42.0,<0.43.0)", "openai (>=2.29.0,<3.0.0)", "pydantic (>=2.12.5,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)", "httpx (>=0.28.1,<0.29.0)", "mcp (>=1.25,<2)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "scenario: End to end scenario tests",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
    "slow: mark test as slow (e.g., requires API calls)"
]
asyncio_mode = "auto"
addopts = "--cov=app --cov-branch --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/**/__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
